What is an Element

--- a/HTML/HTML2.html
+++ b/HTML/HTML2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
 <head><title>HTML 2 Create a HTML Template</title></head>
-<body>Main Content</body>
+<body>This is where content will go.</body>
 </html>
