Apply HTML Tags Exercise 1

--- a/HTML/HTML4.html
+++ b/HTML/HTML4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HTML 3 What is an Element</title>
+        <title>HTML 4 Headings and Bolded Text</title>
     </head>
     
     <body>
