HTML Hyperlinks Anchor

--- a/HTML/HTML7.html
+++ b/HTML/HTML7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HTML 5 Apply HTML Tags Exercise 1</title>
+        <title>HTML 7 HTML Comments</title>
     </head>
     
     <body>
