Image Tags in HTML

--- a/HTML/HTML11.html
+++ b/HTML/HTML11.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>HTML 10 MailTo Send Email</title>
+    <title>HTML 11 Image Tags in HTML</title>
 </head>
     
 <body>
