--- a/HTML/HTML23.html
+++ b/HTML/HTML23.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home</title>
+        <title>HTML 23 iFrames</title>
     </head>
     
     <body>
