Practicing external and internal styling in CSS.

--- a/CSS/CSS0.html
+++ b/CSS/CSS0.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang='en'>
+    <head>
+        <link rel="stylesheet" href="stylesheet.css">
+    </head>
 
-<body>
+    <body>
 
-    <header>Header</header>
-    <p style="color:blue; background-color: grey;">Paragraph</p>
+        <p class="first">Paragraph</p>
+        <p>Testing</p>
+        <p>Testing</p>
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+        <div>4?</div>
 
-</body>
+    </body>
 </html>
