Made major chanegs to the styling of the id two

--- a/CSS/CSS.html
+++ b/CSS/CSS.html
@@ -11,7 +11,7 @@
         <p> Testing </p>
         <p> Testing </p>
         <p id="one"> 1 </p>
-        <p id="two"> 2 </p>
+        <h1 id="two"> Isolated </h1>
         <p id="three"> 3 </p>
         <div> 4? </div>
 
