Began basic setup for new page.

--- a/Personal Tests/personal.html
+++ b/Personal Tests/personal.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
+        <title>Mattmen, Inc.</title> <!-- Used to show title on browser window -->
+
         <link rel="stylesheet" href="personal.css">
     </head>
     <body>
