--- a/Personal Tests/personal.html
+++ b/Personal Tests/personal.html
@@ -2,13 +2,15 @@
 <html>
     <head>
         
-        <title>Mattmen, Inc.</title> <!-- Used to show title on browser window -->
+        <title>Mattmen, Inc.</title> <!-- Used to show title on browser window. -->
 
-        <link rel="stylesheet" href="personal.css">
+        <link rel="shortcut icon" href="../../../Downloads/Mattmen JPEG.jpg">
+        <link rel="stylesheet" href="personal.css"> <!-- Used to connect the external style sheet to this page. -->
     </head>
     <body>
 
-        <h1>Mattmen Incorporated</h1>>
+        <h1 id="MattmenMainTitle">Mattmen Incorporated</h1> <!-- A title that will be displayed at the top of the mattmen page. -->
 
+        <img href="../../../Downloads/Mattmen JPEG.jpg">
     </body>
 </html>
