--- a/Personal Tests/personal.html
+++ b/Personal Tests/personal.html
@@ -8,9 +8,10 @@
         <link rel="stylesheet" href="personal.css"> <!-- Used to connect the external style sheet to this page. -->
     </head>
     <body>
-
+        <img src="../../../Downloads/Mattmen JPEG.jpg">
+        
         <h1 id="MattmenMainTitle">Mattmen Incorporated</h1> <!-- A title that will be displayed at the top of the mattmen page. -->
 
-        <img href="../../../Downloads/Mattmen JPEG.jpg">
+        
     </body>
 </html>
