--- a/Personal Tests/personal.html
+++ b/Personal Tests/personal.html
@@ -8,7 +8,9 @@
         <link rel="stylesheet" href="personal.css"> <!-- Used to connect the external style sheet to this page. -->
     </head>
     <body>
-        <h1 id="MattmenMainTitle"> <img id="MattmenMainLogo" src="../../../Downloads/Mattmen JPEG.jpg"> Mattmen</h1> <!-- A title that will be displayed at the top of the mattmen page. -->
+        <h1 id="Mattmen_Main_Title"> <img id="Mattmen_Main_Logo" src="../../../Downloads/Mattmen JPEG.jpg"> Mattmen</h1> <!-- A title that will be displayed at the top of the mattmen page. -->
+
+        <img id="Artifical_Intelligence_Image" src="../../../Downloads/Artifical Intelligence JPEG.jpg">
 
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inscite autem medicinae et gubernationis ultimum cum ultimo sapientiae comparatur. Graece donan, Latine voluptatem vocant. Summae mihi videtur inscitiae. Graece donan, Latine voluptatem vocant. Quae hic rei publicae vulnera inponebat, eadem ille sanabat. Tum Piso: Quoniam igitur aliquid omnes, quid Lucius noster? Sed ille, ut dixi, vitiose. Sed videbimus.
