Fixed the sizing for the image.

--- a/Personal Tests/personal.html
+++ b/Personal Tests/personal.html
@@ -8,7 +8,11 @@
         <link rel="stylesheet" href="personal.css"> <!-- Used to connect the external style sheet to this page. -->
     </head>
     <body>
-        <h1 id="Mattmen_Main_Title"> <img id="Mattmen_Main_Logo" src="../../../Downloads/Mattmen JPEG.jpg"> Mattmen</h1> <!-- A title that will be displayed at the top of the mattmen page. -->
+        <h1 id="Mattmen_Main_Title"> 
+
+            <img id="Mattmen_Main_Logo" src="../../../Downloads/Mattmen JPEG.jpg"> 
+            
+        </h1> <!-- A title that will be displayed at the top of the mattmen page. -->
 
         <img id="Artifical_Intelligence_Image" src="../../../Downloads/Artifical Intelligence JPEG.jpg">
 
