Did some testing with pseudo classes in Pseudo Classes CSS

--- a/CSS/CSS.html
+++ b/CSS/CSS.html
@@ -13,7 +13,13 @@
         <p id="one"> 1 </p>
         <h1 id="two"> Isolated </h1>
         <p id="three"> 3 </p>
-        <div> 4? </div>
+        <div> 4? 
+            <p> 2020 is now over. </p>
+        </div>
+
+        <div> No. 
+            <p> 2021 is now here. </p>
+        </div>
 
     </body>
 </html>
