--- a/CSS/CSS.html
+++ b/CSS/CSS.html
@@ -2,6 +2,8 @@
 <html lang='en'>
     <head>
         <link rel="stylesheet" href="stylesheet.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
     </head>
 
     <body>
