Added hover function to hyperlinks

--- a/CSS/SideBarNav.html
+++ b/CSS/SideBarNav.html
@@ -2,7 +2,7 @@
 <html lang='en'>
     <head>
 
-        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="SideBarNav.css">
 
     </head>
     <body>
