Added more information to SideNav.html.

--- a/CSS/SideBarNav.html
+++ b/CSS/SideBarNav.html
@@ -11,4 +11,8 @@
             <a href="#"> About </a>
             <a href="#"> Contact </a>
         </aside>
+
+        <p> Lorem ipsum dalet </p>
+        <p class="Lorem"> Lorem Ipsum Dalet Lorem Ipsum Dalet x2</p>
+
     </body>
