Added unordered list with divs into html file.

--- a/CSS/SideBarNav.html
+++ b/CSS/SideBarNav.html
@@ -15,4 +15,11 @@
         <p> Lorem ipsum dalet </p>
         <p class="Lorem"> Lorem Ipsum Dalet Lorem Ipsum Dalet x2</p>
 
+        <ul>
+            <div> Home </div>
+            <div> Content</div>
+            <div> Projects</div>
+            <div> About</div>
+        </ul>
+
     </body>
