Added another div for more practice with advanced selectors.

--- a/CSS/SideBarNav.html
+++ b/CSS/SideBarNav.html
@@ -23,7 +23,7 @@
         </p>
 
         <ul>
-            <div> Home </div>
+            <div class="home"> Home </div>
             <div> Content</div>
             <div> Projects</div>
             <div> About</div>
