added new div incluidng classes and a basic structure.

--- a/CSS/AdvancedCSS.html
+++ b/CSS/AdvancedCSS.html
@@ -12,5 +12,13 @@
                 </ul>
             </nav>
         </header>
+
+        <div class="container">
+            <div class="one">
+                <h1>One</h1>
+                <p> One paragraph content </p>
+            </div>
+        </div>
+
     </body>
 </html>
