Replicated the previous step 4 more times.

--- a/CSS/AdvancedCSS.html
+++ b/CSS/AdvancedCSS.html
@@ -18,6 +18,26 @@
                 <h1>One</h1>
                 <p> One paragraph content </p>
             </div>
+
+            <div class="one">
+                <h1>One</h1>
+                <p> One paragraph content </p>
+            </div>
+
+            <div class="one">
+                <h1>One</h1>
+                <p> One paragraph content </p>
+            </div>
+
+            <div class="one">
+                <h1>One</h1>
+                <p> One paragraph content </p>
+            </div>
+
+            <div class="one">
+                <h1>One</h1>
+                <p> One paragraph content </p>
+            </div>
         </div>
 
     </body>
