Added gradient styling to class one for testing. Also linked the html document out to the stylesheet.

--- a/CSS/AdvancedCSS.html
+++ b/CSS/AdvancedCSS.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 
 <html>
+    <head>
+        <link rel="stylesheet" href="AdvancedCSS.css" type="text/CSS">
+    </head>
     <body>
         <header>
             <nav>
