Added more testing gradient code.

--- a/CSS/AdvancedCSS.html
+++ b/CSS/AdvancedCSS.html
@@ -41,7 +41,10 @@
                 <h1>Five</h1>
                 <p> Fifth paragraph content </p>
             </div>
-        </div>
 
+            <div class="six">
+                <h1>Six</h1>
+                <p> Sixth paragraph content </p>
+        </div>
     </body>
 </html>
