--- a/CSS/AdvancedCSS.html
+++ b/CSS/AdvancedCSS.html
@@ -46,5 +46,10 @@
                 <h1>Six</h1>
                 <p> Sixth paragraph content </p>
         </div>
+
+        <footer>
+            <p>The company footer.</p>
+        </footer>
+
     </body>
 </html>
