Rearranged divs for styling. Did basic styling then added flex function. I am still learning about flex.

--- a/HTML/NewestHTMLfile.html
+++ b/HTML/NewestHTMLfile.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="content">
+        <div id="q1">
+            Have you ever wondered...
+        </div>
+        <div id="q2">
+            Do you ever think...
+        </div>
+        <div id="q3">
+            Is it possible that...
+        </div>
+    </div>
     
 </body>
 </html>
