--- a/HTML/NewestHTMLfile.html
+++ b/HTML/NewestHTMLfile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/NewestCSSFile.css">
     <title>Document</title>
 </head>
 <body>
