Added text emphasis to differentiate between the first half questions and the potential endings to the questions.

--- a/HTML/NewestHTMLfile.html
+++ b/HTML/NewestHTMLfile.html
@@ -17,13 +17,13 @@
             Is it possible that...
         </p>
         <p id="q4">
-            What is the reason...
+            ...what other galaxies look like?
         </p>
         <p id="q5">
-            Why can't you...
+            ...Mars is closer to Earth than fantasy worlds?
         </p>
         <p id="q6">
-            I wonder if...
+            ...aliens exist?
         </p>
     </div>
     
