Found and added images from an outside source to begin image gallery.

--- a/Flex Image Gallery Challenge/flexgal.html
+++ b/Flex Image Gallery Challenge/flexgal.html
@@ -8,9 +8,11 @@
 
     <header> Welcome to My Gallery </header>
     <section class="gallery">
-
+        <img src="../../../Downloads/pexels-jess-bailey-designs-775979.jpg">
+        <img src="../../../Downloads/pexels-oleg-magni-2033987.jpg">
+        <img src="../../../Downloads/pexels-pixabay-60909.jpg">
     </section>
     <footer> Contact me for more images. (c)2021 Copyright </footer>
-    
+
 </body>
 </html>
