Added columns to try to organize the images better. Attempt

--- a/Flex Image Gallery Challenge/flexgal.html
+++ b/Flex Image Gallery Challenge/flexgal.html
@@ -8,9 +8,19 @@
 
     <header> Welcome to My Gallery </header>
     <section class="gallery">
+        
+        <div class="col">
         <img src="../../../Downloads/pexels-jess-bailey-designs-775979.jpg">
+        </div>
+
+        <div class="col">
         <img src="../../../Downloads/pexels-oleg-magni-2033987.jpg">
+        </div>
+
+        <div class="col">
         <img src="../../../Downloads/pexels-pixabay-60909.jpg">
+        </div>
+        
     </section>
     <footer> Contact me for more images. (c)2021 Copyright </footer>
 
