--- a/Flex Image Gallery Challenge/flexgal.html
+++ b/Flex Image Gallery Challenge/flexgal.html
@@ -11,16 +11,21 @@
         
         <div class="col">
         <img src="../../../Downloads/pexels-jess-bailey-designs-775979.jpg">
+        <img src="../../../Downloads/pexels-kristina-paukshtite-701816.jpg">
+        <img src="../../../Downloads/pexels-joao-jesus-2480072.jpg">
         </div>
 
         <div class="col">
         <img src="../../../Downloads/pexels-oleg-magni-2033987.jpg">
+        <img src="../../../Downloads/pexels-hieu-hoang-1179863.jpg">
         </div>
 
         <div class="col">
         <img src="../../../Downloads/pexels-pixabay-60909.jpg">
+        <img src="../../../Downloads/pexels-lisa-fotios-2430934.jpg">
+        <img src="../../../Downloads/pexels-fotografierende-1917358.jpg">
         </div>
-        
+
     </section>
     <footer> Contact me for more images. (c)2021 Copyright </footer>
 
