--- a/Flex Image Gallery Challenge/flexgal.html
+++ b/Flex Image Gallery Challenge/flexgal.html
@@ -6,20 +6,28 @@
 </head>
 <body>
 
-    <header> Welcome to My Gallery </header>
+    <header class="header"> Welcome to My Gallery </header>
     <section class="gallery">
         
         <div class="col">
-        <img src="../../../Downloads/pexels-jess-bailey-designs-775979.jpg">
-        <img src="../../../Downloads/pexels-kristina-paukshtite-701816.jpg">
-        <img src="../../../Downloads/pexels-joao-jesus-2480072.jpg">
+            <img src="../../../Downloads/pexels-jess-bailey-designs-775979.jpg">
+            <img src="../../../Downloads/pexels-kristina-paukshtite-701816.jpg">
+            <img src="../../../Downloads/pexels-joao-jesus-2480072.jpg">
+            <img src="../../../Downloads/pexels-vural-yavas-1076607.jpg">
+            <img src="../../../Downloads/pexels-pixabay-15239.jpg">
+            <img src="../../../Downloads/pexels-min-an-1415378.jpg">
+            <img src="../../../Downloads/pexels-reynaldo-brigworkz-brigantty-2526097.jpg">
+            
         </div>
 
         <div class="col">
-        <img src="../../../Downloads/pexels-oleg-magni-2033987.jpg">
-        <img src="../../../Downloads/pexels-hieu-hoang-1179863.jpg">
+            <img src="../../../Downloads/pexels-oleg-magni-2033987.jpg">
+            <img src="../../../Downloads/pexels-hieu-hoang-1179863.jpg">
+            <img src="../../../Downloads/pexels-evie-shaffer-2575280.jpg">
+            <img src="../../../Downloads/pexels-daria-shevtsova-1070863.jpg">
+            <img src="../../../Downloads/pexels-tanguy-sauvin-10462.jpg">
+            <img src="../../../Downloads/pexels-alesia-talkachova-2039606.jpg">
         </div>
-
 
     </section>
     <footer> Contact me for more images. (c)2021 Copyright </footer>
