Added several more images.

--- a/Flex Image Gallery Challenge/flexgal.html
+++ b/Flex Image Gallery Challenge/flexgal.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <header class="header"> Welcome to My Gallery </header>
+    <header class="header"> welcome to my gallery </header>
     <section class="gallery">
         
         <div class="col">
@@ -17,6 +17,12 @@
             <img src="../../../Downloads/pexels-pixabay-15239.jpg">
             <img src="../../../Downloads/pexels-min-an-1415378.jpg">
             <img src="../../../Downloads/pexels-reynaldo-brigworkz-brigantty-2526097.jpg">
+            <img src="../../../Downloads/pexels-pixabay-34702.jpg">
+            <img src="../../../Downloads/pexels-pixabay-73813.jpg">
+            <img src="../../../Downloads/pexels-dmitriy-yarovoy-969832.jpg">
+            <img src="../../../Downloads/pexels-alex-martin-1165049.jpg">
+            <img src="../../../Downloads/pexels-jovana-nesic-593655.jpg">
+            <img src="../../../Downloads/pexels-rodnae-productions-6708770.jpg">
             
         </div>
 
@@ -27,10 +33,15 @@
             <img src="../../../Downloads/pexels-daria-shevtsova-1070863.jpg">
             <img src="../../../Downloads/pexels-tanguy-sauvin-10462.jpg">
             <img src="../../../Downloads/pexels-alesia-talkachova-2039606.jpg">
+            <img src="../../../Downloads/pexels-pixabay-60909.jpg">
+            <img src="../../../Downloads/pexels-lisa-fotios-2430934.jpg">
+            <img src="../../../Downloads/pexels-fotografierende-1917358.jpg">
+            <img src="../../../Downloads/pexels-philippe-donn-1133957.jpg">
+            <img src="../../../Downloads/pexels-khanh-le-666839.jpg">
         </div>
 
     </section>
-    <footer> Contact me for more images. (c)2021 Copyright </footer>
+    <footer class="header"> Contact me for more images. (c)2021 Copyright </footer>
 
 </body>
 </html>
