Added more styling to the page.

--- a/Flex Image Gallery Challenge/flexgal.html
+++ b/Flex Image Gallery Challenge/flexgal.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title> Gallery </title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="flexgal.css" type="text/css">  
 </head>
 <body>
 
-    <header class="header"> welcome to my gallery </header>
+    <header class="header"> <strong>welcome to my gallery</strong> </header>
     <section class="gallery">
         
         <div class="col">
+            <hr>
             <img src="../../../Downloads/pexels-jess-bailey-designs-775979.jpg">
             <img src="../../../Downloads/pexels-kristina-paukshtite-701816.jpg">
             <img src="../../../Downloads/pexels-joao-jesus-2480072.jpg">
@@ -23,7 +24,7 @@
             <img src="../../../Downloads/pexels-alex-martin-1165049.jpg">
             <img src="../../../Downloads/pexels-jovana-nesic-593655.jpg">
             <img src="../../../Downloads/pexels-rodnae-productions-6708770.jpg">
-            
+            <hr>
         </div>
 
         <div class="col">
@@ -41,7 +42,7 @@
         </div>
 
     </section>
-    <footer class="header"> Contact me for more images. (c)2021 Copyright </footer>
+    <footer class="footer"> contact me for more images. (c)2021 copyright. </footer>
 
 </body>
 </html>
