Styled a few introductory sentences.

--- a/Flex Image Gallery Challenge/flexgal.html
+++ b/Flex Image Gallery Challenge/flexgal.html
@@ -6,10 +6,14 @@
 </head>
 <body>
 
-    <header class="header"> <strong>welcome to my gallery</strong> </header>
+    <header id="header"> <strong>welcome to my gallery</strong> </header>
     <section class="gallery">
         
         <div class="col">
+            <p id="introduction">
+                This gallery was inspired by the website stackskills.com. I used all of my images from pexels.com.
+            </p>
+
             <hr>
             <img src="../../../Downloads/pexels-jess-bailey-designs-775979.jpg">
             <img src="../../../Downloads/pexels-kristina-paukshtite-701816.jpg">
@@ -42,7 +46,7 @@
         </div>
 
     </section>
-    <footer class="footer"> contact me for more images. (c)2021 copyright. </footer>
+    <footer id="footer"> contact me for more images. (c)2021 copyright. </footer>
 
 </body>
 </html>
