Added conclusion text

--- a/Flex Image Gallery Challenge/flexgal.html
+++ b/Flex Image Gallery Challenge/flexgal.html
@@ -43,6 +43,10 @@
             <img src="../../../Downloads/pexels-fotografierende-1917358.jpg">
             <img src="../../../Downloads/pexels-philippe-donn-1133957.jpg">
             <img src="../../../Downloads/pexels-khanh-le-666839.jpg">
+
+            <p id="introduction">
+                Thank you for looking through my photo gallery.
+            </p>
         </div>
 
     </section>
