Added my information to the footer.

--- a/Flex Image Gallery Challenge/flexgal.html
+++ b/Flex Image Gallery Challenge/flexgal.html
@@ -50,7 +50,7 @@
         </div>
 
     </section>
-    <footer id="footer"> contact me for more images. (c)2021 copyright. </footer>
+    <footer id="footer"> contact me for more images. my email is dmatthew2005@gmail.com (c)2021 copyright. </footer>
 
 </body>
 </html>
