Chnaged conclusion code

--- a/Flex Image Gallery Challenge/flexgal.html
+++ b/Flex Image Gallery Challenge/flexgal.html
@@ -44,7 +44,7 @@
             <img src="../../../Downloads/pexels-philippe-donn-1133957.jpg">
             <img src="../../../Downloads/pexels-khanh-le-666839.jpg">
 
-            <p id="introduction">
+            <p id="conclusion">
                 Thank you for looking through my photo gallery.
             </p>
         </div>
