Finsihed organizing all code for photo gallery draft and added more to the ending paragraph

--- a/Flex Image Gallery Challenge/flexgal.html
+++ b/Flex Image Gallery Challenge/flexgal.html
@@ -44,7 +44,7 @@
             <img src="../../../Downloads/pexels-khanh-le-666839.jpg">
 
             <p id="conclusion">
-                Thank you for looking through my photo gallery.
+                Thank you for looking through my photo gallery. These are not my photos. Do not contact me for more images. That is simply footer filler. Thank you.
             </p>
         </div>
 
